--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.0.0",
+    "file-saver": "^2.0.5",
+    "firebase": "^9.12.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.4.2"
