--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.0.0",
+    "axios": "^1.1.3",
     "file-saver": "^2.0.5",
     "firebase": "^9.12.1",
     "react": "^17.0.0",
